Tool data onto real data components
Why: this is the storage migration the whole port exists to serve, and the riskiest
single slice. 1.20 kept a tool's state in one shared CompoundTag hanging off the
ItemStack; 1.21 has typed, immutable data components. Three schemas replace the tag:

    tconstruct:tool         persistent + synced: materials, upgrades, data, broken.
                            Every field defaults, and a default is never written.
    tconstruct:tool_stats   network-synchronized ONLY - verified transient against
                            DataComponentPatch.CODEC itself, not against the docs.
    minecraft:damage        vanilla owns durability outright.

The behavioural change no signature expresses: a ToolStack used to wrap the stack's
own tag, so a setter was visible on the stack immediately. Components are values.
A tool now holds its own copy and every edit stays local until updateStack() runs.
ToolStack.from() returns a read-only view; ToolStack.mutable() returns a bound tool
that must be committed. This distinction is the source of the whole family of bugs
the campaign kept finding (six during the port, eight more in the closing sweep) -
which is exactly why the edit tracker below exists.

Key decisions, each argued: damage commits WITH the builder, because setDamage also
sets broken in the OTHER component and a write-through would recreate the exact
atomicity hazard; never via setDamageValue, which NeoForge routes back through our
own items; a registries-not-ready fallback reproduces 1.20's stale-tag behaviour
instead of zeroing durability; RestrictedCompoundTag is deleted because its reason
to exist - sharing the item tag - is gone.

The data-loss guard is the constraint that shaped both codecs: a throwing component
codec fails its whole patch and vanilla DROPS the stack. One stale material id would
silently delete a player's tool. Neither new loadable can throw.

The leak tracker: a Cleaner-based EditTracker reports a bound tool that was 